@@ -77,8 +77,58 @@ public:
         
     }
 
+    void testCommandLineArgs() {
+        report(0,"make sure command line args take priority...");
+
+        const char *fname0 = "_yarp_regression_test.ini";
+        const char *fname1 = "_yarp_regression_test_rf1.txt";
+
+        // create some test files
+
+        {
+            ofstream fout0(fname0);
+            fout0 << "style capability" << endl;
+            fout0 << "capability_directory \".\"" << endl;
+            fout0 << "default_capability \".\"" << endl;
+            fout0.close();
+
+            ofstream fout1(fname1);
+            fout1 << "x 14" << endl;
+            fout1.close();
+
+            const char *argv[] = { "ignore", 
+                                   "--policy", "_yarp_regression_test",
+                                   "--_yarp_regression_test", ".",
+                                   "--from", fname1, 
+                                   "--verbose", "0",
+                                   NULL };
+            int argc = 9;
+
+            ResourceFinder rf1;
+            rf1.configure("",argc,(char **)argv);
+            checkEqual(rf1.find("x").asInt(),14,"found x");
+
+            const char *argv2[] = { "ignore", 
+                                    "--policy", "_yarp_regression_test",
+                                    "--_yarp_regression_test", ".",
+                                    "--from", fname1, 
+                                    "--verbose", "0",
+                                    "--x", "20",
+                                    "--y", "30",
+                                    NULL };
+            int argc2 = 13;
+
+            ResourceFinder rf2;
+            rf2.configure("",argc2,(char **)argv2);
+            checkEqual(rf2.find("y").asInt(),30,"found y");
+            checkEqual(rf2.find("x").asInt(),20,"override x");
+        }
+
+    }
+
     virtual void runTests() {
         testBasics();
+        testCommandLineArgs();
     }
 };
 
