@@ -191,6 +191,7 @@ public:
             configFilePath = fromPath;
             config.fromConfigFile(from,false);
         }
+        config.fromCommand(argc,argv,skip,false);
         return true;
     }
 
